<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="itesm.mx.mamicare.NewAssesment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oxigeno"
        android:id="@+id/tvOxygen"
        android:layout_marginTop="196dp"
        android:textSize="14sp"
        android:textColor="#212121"
        android:layout_marginStart="419dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ritmo"
        android:id="@+id/tvPressure"
        android:layout_below="@+id/tvOxygen"
        android:layout_alignStart="@+id/tvOxygen"
        android:layout_marginTop="23dp"
        android:textSize="14sp"
        android:textColor="#212121" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etOxygen"
        android:layout_alignBottom="@+id/tvOxygen"
        android:layout_alignStart="@+id/etRate" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etRate"
        android:layout_below="@+id/etOxygen"
        android:layout_toEndOf="@+id/tvPressure"
        android:layout_marginStart="64dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonCancelarR"
        android:id="@+id/btnCancel"
        android:layout_marginBottom="129dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/tvOxygen" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonAgregarR"
        android:id="@+id/btnSave"
        android:layout_alignBaseline="@+id/btnCancel"
        android:layout_alignBottom="@+id/btnCancel"
        android:layout_alignEnd="@+id/etRate" />
</RelativeLayout>
