<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Initial Date -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechaInicio"
                android:id="@+id/tvStartDate"
                android:textColor="#212121" />

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem"
                android:id="@+id/tvActiveStartDate"
                android:textColor="#212121"/>
        </TableRow>

        <!-- Actual week -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semActual"
                android:id="@+id/tvActualWeek"
                android:textColor="#212121"/>

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem"
                android:id="@+id/tvActiveActualWeek"
                android:textColor="#212121"/>
        </TableRow>

        <!-- Remaining weeks -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semRes"
                android:id="@+id/tvRemainingWeeks"
                android:textColor="#212121"/>

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem"
                android:id="@+id/tvActiveRemainingWeeks"
                android:textColor="#212121"/>
        </TableRow>

        <!-- Alert -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alertaActual"
                android:id="@+id/tvAlert"
                android:textColor="#212121"/>

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem"
                android:id="@+id/tvActiveAlert"
                android:textColor="#212121"/>
        </TableRow>

        <!-- End date -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechaTermino"
                android:id="@+id/tvEndDate"
                android:textColor="#212121"/>

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem"
                android:id="@+id/tvActiveEndDate"
                android:textColor="#212121"/>
        </TableRow>
    </TableLayout>
</LinearLayout>